--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "galactic_age",
   "version": "1.0.0",
-  "description": "",
+  "description": "## Description",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode development",
